--- a/index.html
+++ b/index.html
@@ -27,6 +27,55 @@
             d="M20.71 19.29L17.31 15.9C18.407 14.5025 19.0022 12.7767 19 11C19 9.41775 18.5308 7.87103 17.6518 6.55544C16.7727 5.23985 15.5233 4.21447 14.0615 3.60897C12.5997 3.00347 10.9911 2.84504 9.43928 3.15372C7.88743 3.4624 6.46197 4.22433 5.34315 5.34315C4.22433 6.46197 3.4624 7.88743 3.15372 9.43928C2.84504 10.9911 3.00347 12.5997 3.60897 14.0615C4.21447 15.5233 5.23985 16.7727 6.55544 17.6518C7.87103 18.5308 9.41775 19 11 19C12.7767 19.0022 14.5025 18.407 15.9 17.31L19.29 20.71C19.383 20.8037 19.4936 20.8781 19.6154 20.9289C19.7373 20.9797 19.868 21.0058 20 21.0058C20.132 21.0058 20.2627 20.9797 20.3846 20.9289C20.5064 20.8781 20.617 20.8037 20.71 20.71C20.8037 20.617 20.8781 20.5064 20.9289 20.3846C20.9797 20.2627 21.0058 20.132 21.0058 20C21.0058 19.868 20.9797 19.7373 20.9289 19.6154C20.8781 19.4936 20.8037 19.383 20.71 19.29V19.29ZM5 11C5 9.81332 5.3519 8.65328 6.01119 7.66658C6.67047 6.67989 7.60755 5.91085 8.7039 5.45673C9.80026 5.0026 11.0067 4.88378 12.1705 5.11529C13.3344 5.3468 14.4035 5.91825 15.2426 6.75736C16.0818 7.59648 16.6532 8.66558 16.8847 9.82946C17.1162 10.9933 16.9974 12.1997 16.5433 13.2961C16.0892 14.3925 15.3201 15.3295 14.3334 15.9888C13.3467 16.6481 12.1867 17 11 17C9.4087 17 7.88258 16.3679 6.75736 15.2426C5.63214 14.1174 5 12.5913 5 11Z" />
         </svg></button>
     </header>
+    <main class="main">
+      <div class="slider1">
+        <div class="slider1__imgItem"><img src="./assets/img/slider-arrow-1.jpg" alt="img" class="slider__img"></div>
+        <div class="slider1__nav"><button class="slider1__arrowRight"><img class="slider1__arrow"
+              src="./assets/img/arrows/arrow-back.svg" alt="arrow-back"></button><button class="btn slider1__btn">Start
+            drinking</button><button class="slider1__arrowLeft"><img class="slider1__arrow"
+              src="./assets/img/arrows/arrow-forward.svg" alt="arrow-forward"></button></div>
+      </div>
+      <div class="slider2">
+        <div class="slider2__imgItem"><img src="./assets/img/slider-dotts-1.jpg" alt="img" class="slider2__img"></div>
+        <button class="btn slider2__btn">Start drinking</button>
+        <div class="slider2__dots">
+          <button class="slider2__dot"></button>
+          <button class="slider2__dot slider2__dot--active"></button>
+          <button class="slider2__dot"></button>
+        </div>
+      </div>
+
+      <article class="freshy articleCommon">
+        <h2 class="freshy__title title">GO GREEN AND STAY <span>FRE­&shySHY</span></h2>
+        <div class="freshy__desc description">
+          <p class="description__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+            cumque,
+            repellat quisquam mollitia,
+            rerum adipisci dolorum delectus inventore provident magni velit et accusamus ! Ipsam ex id praesentium
+            maiores expedita accusamus. </p>
+        </div>
+      </article>
+
+      <article class="healthy articleCommon articleCommon--vertical">
+        <h2 class="healthy__title title">WORRY LESS DRINK <span>HEA­&shyL­THY­</span></h2>
+        <div class="healthy__desc description">
+          <p class="description__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto cupiditate sint
+            amet, aut eaque id reiciendis itaque sed, perspiciatis quaerat unde excepturi maiores. Expedita ipsa placeat
+            odio quis, magni aliquid?</p>
+        </div>
+      </article>
+
+      <article class="thirsty articleCommon articleCommon--reverse">
+        <h2 class="thirsty__title title">ARE YOU SUMMER <span>THIR­&shy­STY?</span></h2>
+        <div class="thirsty__desc description">
+          <p class="description__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto cupiditate sint
+            amet,
+            aut eaque id reiciendis itaque sed,
+            perspiciatis quaerat unde excepturi maiores. Expedita ipsa placeat odio quis,
+            magni aliquid?</p>
+        </div>
+      </article>
+    </main>
   </div>
 </body>
 
